<resources>
    <string name="app_name">网络测试工具</string>
    <string name="version_str">mcmc</string>
    <string name="devices">测试</string>
    <string name="history">历史记录</string>
    <string name="settings">设置</string>
    <string name="action_about">关于</string>
    <string name="ip">ip地址</string>
    <string name="default_ip">www.baidu.com</string>
    <string name="interval">测试间隔</string>
    <string name="default_interval">2</string>
    <string name="key_address">edittext_ipaddress</string>
    <string name="key_interval">edittext_interval</string>
</resources>
