<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/swiperefreshlayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".home.HomeActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_home">

    <FrameLayout
        android:id="@+id/devices_fragment"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
    </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp">
        <Button
            android:id="@+id/btn1"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:text="@string/devices"/>
        <Button
            android:id="@+id/btn2"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:text="@string/history"/>
        <Button
            android:id="@+id/btn3"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:text="@string/settings"/>
    </LinearLayout>

</LinearLayout>

